Modified labels in series search bar to avoid wrapping

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
 }
 label {
   margin: auto 1rem;
+  white-space: nowrap;
 }
 
 .episodes {
